--- a/pages/404.html
+++ b/pages/404.html
@@ -4,11 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Page Not Found</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="icon" type="image/jpeg" href="/images/logo.jpg">
-    <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
@@ -24,14 +22,17 @@
         </div>
         <nav class="main-nav">
             <a href="/home">Home</a>
-            <a href="/aboutUs" class="active">About Us</a>
+            <a href="/aboutUs">About Us</a>
             <a href="/contact">Contact Us</a>
         </nav>
     </header>
 
-    <main class="main-content">
-        <h1>About Our Company</h1>
-        <p>Here you can learn more about our history, our mission, and our team.</p>
+    <main class="main-content" style="text-align: center; padding-top: 5rem; padding-bottom: 5rem;">
+        <h1 style="font-size: 6rem; color: #e7cea1; margin-bottom: 0;">404</h1>
+        <h2 style="margin-top: 0; margin-bottom: 2rem;">Page Not Found</h2>
+        <p>Sorry, the page you are looking for does not exist.</p>
+        <a href="/home" class="submit-btn" style="text-decoration: none; display: inline-block; align-self: center;">Go
+            to Homepage</a>
     </main>
 
     <footer class="new-site-footer">
