--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,6 +7,7 @@
     <title>Contact Us</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="icon" type="image/jpeg" href="/images/logo.jpg">
+    <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
@@ -29,8 +30,59 @@
     </header>
 
     <main class="main-content">
-        <h1>Get In Touch</h1>
-        <p>You can contact us via email at contact@example.com or by phone.</p>
+        <!-- UPDATED MAP SECTION -->
+        <section class="map-section">
+            <p class="map-subtitle">GET IN TOUCH</p>
+            <h2 class="map-title">Pleasure to shake hands with you</h2>
+            <div class="map-container">
+                <iframe src="https://maps.google.com/maps?q=28.697431,77.489266&t=&z=15&ie=UTF8&iwloc=&output=embed"
+                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+        </section>
+        <!-- END UPDATED MAP SECTION -->
+
+        <section class="contact-page-section">
+            <div class="contact-info">
+                <div class="info-block">
+                    <h3 class="info-title">VISIT US:</h3>
+                    <!-- UPDATED ADDRESS -->
+                    <p>D13, Block D, Swaran Jayanti Puram, Govindpuram, Ghaziabad, Uttar Pradesh 201013</p>
+                </div>
+                <div class="info-block">
+                    <h3 class="info-title">CALL US:</h3>
+                    <p>(+91) 120 313 0916 / (+91) 120 313 2794</p>
+                </div>
+                <div class="info-block">
+                    <h3 class="info-title">EMAIL US:</h3>
+                    <p>info@myspacearchitects.com</p>
+                </div>
+                <div class="info-block">
+                    <h3 class="info-title">WORK WITH US:</h3>
+                    <p>hr@myspacearchitects.com</p>
+                </div>
+            </div>
+            <div class="contact-form-container">
+                <form id="contactForm" novalidate>
+                    <div class="form-group-inline">
+                        <div class="form-group">
+                            <input type="text" id="name" name="name" placeholder="Name*" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="email" id="email" name="email" placeholder="Email Address">
+                        </div>
+                        <div class="form-group">
+                            <input type="tel" id="phone" name="phone" placeholder="Phone Number">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <textarea id="message" name="message" placeholder="Message*" required></textarea>
+                    </div>
+                    <button type="submit" class="submit-btn">Send message</button>
+                </form>
+            </div>
+        </section>
     </main>
 
     <footer class="new-site-footer">
@@ -73,6 +125,123 @@
             </div>
         </div>
     </footer>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const form = document.getElementById('contactForm');
+            const submitButton = form.querySelector('.submit-btn');
+
+            const clearMessages = () => {
+                const errorMessages = form.querySelectorAll('.error-message');
+                errorMessages.forEach(el => el.remove());
+                const feedbackDiv = document.getElementById('form-feedback');
+                if (feedbackDiv) {
+                    feedbackDiv.remove();
+                }
+            };
+
+            const showError = (fieldId, message) => {
+                const field = document.getElementById(fieldId);
+                if (!field) return;
+                const formGroup = field.closest('.form-group');
+                if (!formGroup) return;
+
+                const errorDiv = document.createElement('div');
+                errorDiv.className = 'error-message';
+                errorDiv.textContent = message;
+                formGroup.appendChild(errorDiv);
+            };
+
+            const showFeedback = (message, type) => {
+                let feedbackDiv = document.getElementById('form-feedback');
+                if (!feedbackDiv) {
+                    feedbackDiv = document.createElement('div');
+                    feedbackDiv.id = 'form-feedback';
+                    submitButton.parentNode.insertBefore(feedbackDiv, submitButton);
+                }
+                feedbackDiv.textContent = message;
+                feedbackDiv.className = type;
+
+                // --- NEW CODE: Automatically remove success message after 5 seconds ---
+                if (type === 'success') {
+                    setTimeout(() => {
+                        if (feedbackDiv) {
+                            feedbackDiv.remove();
+                        }
+                    }, 5000); // 5000 milliseconds = 5 seconds
+                }
+            };
+
+            form.addEventListener('submit', async (e) => {
+                e.preventDefault();
+                clearMessages();
+
+                let isValid = true;
+                const name = document.getElementById('name').value.trim();
+                const email = document.getElementById('email').value.trim();
+                const phone = document.getElementById('phone').value.trim();
+                const message = document.getElementById('message').value.trim();
+
+                if (!name) {
+                    showError('name', 'Name is required.');
+                    isValid = false;
+                }
+                if (!email && !phone) {
+                    showFeedback('Please provide either an email or a phone number.', 'error');
+                    isValid = false;
+                }
+                if (email && !/^\w+([.-]?\w+)*@\w+([.-]?\w+)*(\.\w{2,3})+$/.test(email)) {
+                    showError('email', 'Please enter a valid email address.');
+                    isValid = false;
+                }
+                if (phone && !/^\+?[0-9]{10}$/.test(phone)) {
+                    showError('phone', 'Please enter a valid 10-digit phone number.');
+                    isValid = false;
+                }
+                if (!message) {
+                    showError('message', 'Message is required.');
+                    isValid = false;
+                } else if (message.length < 10) {
+                    showError('message', 'Message must be at least 10 characters long.');
+                    isValid = false;
+                } else if (message.length > 500) {
+                    showError('message', 'Message cannot exceed 500 characters.');
+                    isValid = false;
+                }
+
+                if (!isValid) return;
+
+                const formData = { name, email, phone, message };
+
+                try {
+                    const response = await fetch('/api/enquiry', {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify(formData),
+                    });
+                    const result = await response.json();
+                    if (response.ok) {
+                        const successMessage = `Thank you! Your enquiry has been submitted. Your reference ID is #${result.enquiryId}.`;
+                        showFeedback(successMessage, 'success');
+                        form.reset();
+                    } else {
+                        showFeedback(result.message || 'An error occurred.', 'error');
+                        if (result.errors) {
+                            for (const key in result.errors) {
+                                if (key === 'general') {
+                                    showFeedback(result.errors[key], 'error');
+                                } else {
+                                    showError(key, result.errors[key]);
+                                }
+                            }
+                        }
+                    }
+                } catch (error) {
+                    showFeedback('A network error occurred. Please try again.', 'error');
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
