--- a/pages/contact.html
+++ b/pages/contact.html
@@ -128,7 +128,7 @@
                             </div>
                             <div class="form-group">
                                 <input
-                                    type="tel"
+                                    type="number"
                                     id="phone"
                                     name="phone"
                                     placeholder="Phone Number"
