--- a/pages/404.html
+++ b/pages/404.html
@@ -5,10 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             name="description"
-            content="Page not found - The page you're looking for doesn't exist. Return to Virinchi Architects homepage."
+            content="Page not found - The page you're looking for doesn't exist. Return to Virinchi Architect homepage."
         />
         <meta name="robots" content="noindex, nofollow" />
-        <title>Page Not Found - Virinchi Architects</title>
+        <title>Page Not Found - Virinchi Architect</title>
         <link rel="stylesheet" href="/style.css" />
         <link rel="icon" type="image/jpeg" href="/images/logo.jpg" />
     </head>
@@ -24,7 +24,7 @@
                     />
                 </a>
             </div>
-            <div class="header-title">Virinchi Architects</div>
+            <div class="header-title">Virinchi Architect</div>
             <nav class="main-nav">
                 <a href="/home">Home</a>
                 <a href="/aboutUs">About Us</a>
@@ -50,68 +50,55 @@
         <footer class="new-site-footer">
             <div class="footer-content">
                 <div class="footer-column footer-logo-area">
-                    <img
-                        src="/images/logo.jpg"
-                        alt="Virinchi Architects Logo"
-                        class="footer-logo"
-                        onerror="this.onerror=null;this.src='https://placehold.co/150/1c1c1c/e7cea1?text=LOGO';"
-                    />
-                    <p>Virinchi Architects</p>
+                    <img src="/images/logo.jpg" alt="Virinchi Architect Logo" class="footer-logo"
+                        onerror="this.onerror=null;this.src='https://placehold.co/150/1c1c1c/e7cea1?text=LOGO';" />
+                    <p>Virinchi Architect</p>
                 </div>
-
                 <div class="footer-column footer-links-area">
                     <div class="link-category">
-                        <h4>Residential</h4>
-                        <p>ABC</p>
+                        <h4>Designing & Planning</h4>
+                        <ul style="margin:0; padding-left:10px;">
+                            <li>Residencial Properties</li>
+                            <li>Commercial & Office Space</li>
+                        </ul>
                     </div>
                     <div class="link-category">
                         <h4>Data Centre</h4>
-                        <p>DEF</p>
+                        <ul style="margin:0; padding-left:10px;">
+                            <li>NTT Data Center</li>
+                            <li>ST Telemedia</li>
+                            <li>Ananat Raj Cloud Pvt. Ltd.</li>
+                        </ul>
                     </div>
                     <div class="link-category">
                         <h4>Interior</h4>
-                        <p>GHI</p>
+                        <ul style="margin:0; padding-left:10px;">
+                            <li>Office Spaces</li>
+                            <li>Living Space</li>
+                        </ul>
                     </div>
                 </div>
-
                 <div class="footer-column footer-contact-area">
                     <h4>Get in touch with us <i class="fa-solid fa-plus-circle"></i></h4>
                     <div class="social-icons">
-                        <a
-                            href="https://www.instagram.com"
-                            target="_blank"
-                            rel="noopener"
-                            aria-label="Instagram"
-                            ><i class="fab fa-instagram"></i
-                        ></a>
-                        <a
-                            href="https://www.linkedin.com"
-                            target="_blank"
-                            rel="noopener"
-                            aria-label="LinkedIn"
-                            ><i class="fab fa-linkedin-in"></i
-                        ></a>
-                        <a
-                            href="https://www.facebook.com"
-                            target="_blank"
-                            rel="noopener"
-                            aria-label="Facebook"
-                            ><i class="fab fa-facebook-f"></i
-                        ></a>
-                        <a
-                            href="mailto:contact@example.com"
-                            target="_blank"
-                            rel="noopener"
-                            aria-label="Gmail"
-                            ><i class="fas fa-envelope"></i
-                        ></a>
-                        <a href="tel:+1234567890" aria-label="Phone"
-                            ><i class="fas fa-phone"></i
-                        ></a>
+                        <a href="https://www.instagram.com/virinchi_architects?igsh=MWNrY2NkYmlwdzlqdw==" target="_blank"
+                            rel="noopener" aria-label="Instagram">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/virinchi-architects-8306a5373/" target="_blank" rel="noopener"
+                            aria-label="LinkedIn">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                        <a href="#" aria-label="Facebook">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="mailto:virinchiarchitect@gmail.com" aria-label="Mail">
+                            <i class="fa-solid fa-envelope"></i>
+                        </a>
+                        <a href="tel:8178596746" aria-label="Phone">
+                            <i class="fa-solid fa-phone"></i>
+                        </a>
                     </div>
-                    <p class="copyright">
-                        &copy; 2025 Virinchi Architects.<br />All Rights Reserved
-                    </p>
                 </div>
             </div>
         </footer>
