--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,36 +5,36 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             name="description"
-            content="Contact Virinchi Architects - Get in touch for architectural consultations, project inquiries, and design services. We're here to help bring your vision to life."
+            content="Contact Virinchi Architect - Get in touch for architectural consultations, project inquiries, and design services. We're here to help bring your vision to life."
         />
         <meta
             name="keywords"
-            content="contact Virinchi Architects, architectural consultation, project inquiry, design services, get quote"
+            content="contact Virinchi Architect, architectural consultation, project inquiry, design services, get quote"
         />
-        <meta name="author" content="Virinchi Architects" />
+        <meta name="author" content="Virinchi Architect" />
         <meta name="robots" content="index, follow" />
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://virinchi-architects.com/contact" />
-        <meta property="og:title" content="Contact Us - Virinchi Architects" />
+        <meta property="og:title" content="Contact Us - Virinchi Architect" />
         <meta
             property="og:description"
-            content="Contact Virinchi Architects for architectural consultations and project inquiries. We're here to help bring your vision to life."
+            content="Contact Virinchi Architect for architectural consultations and project inquiries. We're here to help bring your vision to life."
         />
         <meta property="og:image" content="/images/logo.jpg" />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
         <meta property="twitter:url" content="https://virinchi-architects.com/contact" />
-        <meta property="twitter:title" content="Contact Us - Virinchi Architects" />
+        <meta property="twitter:title" content="Contact Us - Virinchi Architect" />
         <meta
             property="twitter:description"
-            content="Contact Virinchi Architects for architectural consultations and project inquiries. We're here to help bring your vision to life."
+            content="Contact Virinchi Architect for architectural consultations and project inquiries. We're here to help bring your vision to life."
         />
         <meta property="twitter:image" content="/images/logo.jpg" />
 
-        <title>Contact Us - Virinchi Architects</title>
+        <title>Contact Us - Virinchi Architect</title>
         <link rel="stylesheet" href="/style.css" />
         <link rel="icon" type="image/jpeg" href="/images/logo.jpg" />
         <!-- Font Awesome for icons -->
@@ -55,7 +55,7 @@
                     />
                 </a>
             </div>
-            <div class="header-title">Virinchi Architects</div>
+            <div class="header-title">Virinchi Architect</div>
             <nav class="main-nav">
                 <a href="/home">Home</a>
                 <a href="/aboutUs">About Us</a>
@@ -95,15 +95,11 @@
                     </div>
                     <div class="info-block">
                         <h3 class="info-title">CALL US:</h3>
-                        <p>(+91) 120 313 0916 / (+91) 120 313 2794</p>
+                        <p>(+91) 81785 96746 / (+91) 78388 26859</p>
                     </div>
                     <div class="info-block">
                         <h3 class="info-title">EMAIL US:</h3>
-                        <p>info@myspacearchitects.com</p>
-                    </div>
-                    <div class="info-block">
-                        <h3 class="info-title">WORK WITH US:</h3>
-                        <p>hr@myspacearchitects.com</p>
+                        <p>virinchiarchitect@gmail.com</p>
                     </div>
                 </div>
                 <div class="contact-form-container">
@@ -127,12 +123,7 @@
                                 />
                             </div>
                             <div class="form-group">
-                                <input
-                                    type="number"
-                                    id="phone"
-                                    name="phone"
-                                    placeholder="Phone Number"
-                                />
+                                <input type="tel" id="phone" name="phone" placeholder="Phone Number" maxlength="10" />
                             </div>
                         </div>
                         <div class="form-group">
@@ -152,71 +143,58 @@
         <footer class="new-site-footer">
             <div class="footer-content">
                 <div class="footer-column footer-logo-area">
-                    <img
-                        src="/images/logo.jpg"
-                        alt="Virinchi Architects Logo"
-                        class="footer-logo"
-                        onerror="this.onerror=null;this.src='https://placehold.co/150/1c1c1c/e7cea1?text=LOGO';"
-                    />
-                    <p>Virinchi Architects</p>
+                    <img src="/images/logo.jpg" alt="Virinchi Architect Logo" class="footer-logo"
+                        onerror="this.onerror=null;this.src='https://placehold.co/150/1c1c1c/e7cea1?text=LOGO';" />
+                    <p>Virinchi Architect</p>
                 </div>
-
                 <div class="footer-column footer-links-area">
                     <div class="link-category">
-                        <h4>Residential</h4>
-                        <p>ABC</p>
+                        <h4>Designing & Planning</h4>
+                        <ul style="margin:0; padding-left:10px;">
+                            <li>Residencial Properties</li>
+                            <li>Commercial & Office Space</li>
+                        </ul>
                     </div>
                     <div class="link-category">
                         <h4>Data Centre</h4>
-                        <p>DEF</p>
+                        <ul style="margin:0; padding-left:10px;">
+                            <li>NTT Data Center</li>
+                            <li>ST Telemedia</li>
+                            <li>Ananat Raj Cloud Pvt. Ltd.</li>
+                        </ul>
                     </div>
                     <div class="link-category">
                         <h4>Interior</h4>
-                        <p>GHI</p>
+                        <ul style="margin:0; padding-left:10px;">
+                            <li>Office Spaces</li>
+                            <li>Living Space</li>
+                        </ul>
                     </div>
                 </div>
-
                 <div class="footer-column footer-contact-area">
                     <h4>Get in touch with us <i class="fa-solid fa-plus-circle"></i></h4>
                     <div class="social-icons">
-                        <a
-                            href="https://www.instagram.com"
-                            target="_blank"
-                            rel="noopener"
-                            aria-label="Instagram"
-                            ><i class="fab fa-instagram"></i
-                        ></a>
-                        <a
-                            href="https://www.linkedin.com"
-                            target="_blank"
-                            rel="noopener"
-                            aria-label="LinkedIn"
-                            ><i class="fab fa-linkedin-in"></i
-                        ></a>
-                        <a
-                            href="https://www.facebook.com"
-                            target="_blank"
-                            rel="noopener"
-                            aria-label="Facebook"
-                            ><i class="fab fa-facebook-f"></i
-                        ></a>
-                        <a
-                            href="mailto:contact@example.com"
-                            target="_blank"
-                            rel="noopener"
-                            aria-label="Gmail"
-                            ><i class="fas fa-envelope"></i
-                        ></a>
-                        <a href="tel:+1234567890" aria-label="Phone"
-                            ><i class="fas fa-phone"></i
-                        ></a>
+                        <a href="https://www.instagram.com/virinchi_architects?igsh=MWNrY2NkYmlwdzlqdw==" target="_blank"
+                            rel="noopener" aria-label="Instagram">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/virinchi-architects-8306a5373/" target="_blank" rel="noopener"
+                            aria-label="LinkedIn">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                        <a href="#" aria-label="Facebook">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="mailto:virinchiarchitect@gmail.com" aria-label="Mail">
+                            <i class="fa-solid fa-envelope"></i>
+                        </a>
+                        <a href="tel:8178596746" aria-label="Phone">
+                            <i class="fa-solid fa-phone"></i>
+                        </a>
                     </div>
-                    <p class="copyright">
-                        &copy; 2025 Virinchi Architects.<br />All Rights Reserved
-                    </p>
                 </div>
             </div>
-        </footer>
+            </footer>
 
         <script>
             document.addEventListener('DOMContentLoaded', () => {
